plugins {
	id 'fabric-loom' version '1.8-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven {
		url 'https://maven.xpple.dev/maven2'
	}
	maven { url 'https://maven.isxander.dev/releases' }
	maven { url "https://maven.terraformersmc.com/releases/" }
    maven { 
        url "https://maven.nucleoid.xyz/"
        name "Nucleoid"
    }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation("dev.isxander:yet-another-config-lib:3.6.1+1.20.4-fabric")
	modCompileOnly("com.terraformersmc:modmenu:${project.modmenu}") {
		exclude(group: "net.fabricmc.fabric-api")
	}
    modImplementation("eu.pb4:placeholder-api:2.4.0-pre.1+1.20.4")
	modImplementation "dev.xpple:clientarguments:1.7"
	include "dev.xpple:clientarguments:1.7"
	modImplementation files(".gradle/monumenta-item-dictionary-1.5.1.jar")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {

	}
}
